--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <li>получение опыта работы в команде</li>
         </ul>
 
-        <p id="start-data">Дата начала работы над проектом: 6 декабря 2021 г.</p>
-        <p>Дата завершения работы над проектом: -</p>
+        <p id="start-data">Дата начала работы над проектом: 14 декабря 2021 г.</p>
+        <p>Дата завершения работы над проектом: 28 декабря 2021 г. </p>
         <p>Программа написана на языке C++, средой разработки данной программы является VS 2019.</p>
       </article>
       <h2 id="team">Команда</h2>
