--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/logo/krabb.png">
     <title>Colored Crabs</title>
   </head>
   <body>
-    <h1 class="title" id="1">Colored crabs</h1>
+  
     <div class="container">
-    <div class="div1">
 
+    <div class="div1">
       <input type="checkbox" id="menu">
       <nav>
-
         <label for="menu" class="button">Menu</label>
         <ul class="menu-main">
           <li class="menu-list"><a href="#about-project">О проекте</a></li>
@@ -22,24 +22,20 @@
           <li class="menu-list"><a href="https://github.com/ax2067/Colored-crabs">Github</a></li>
         </ul>
       </nav>
-
-
     </div>
 
-<div class="div2">
-
-
+    <div class="div2">
+      <h1 class="title" id="1">Colored crabs</h1>
       <article id="about-project">
-
         <h2><a name="about-project">О проекте</a></h2>
         <p>
-          **<i><a href="https://github.com/ax2067/Colored-crabs">Colored-crabs</a></i>** - проект, разработанный небольшой командой начинающих разработчиков - студентов 1 курса 4 группы Факультета Информационных технологий <i><a href="https://www.belstu.by/">Белорусского Государственного Технологического Университета</a></i>.
+          **<span class="i"><a href="https://github.com/ax2067/Colored-crabs" title="GitHub">Colored-crabs</a></span>** - проект, разработанный небольшой командой начинающих разработчиков - студентов 1 курса 4 группы Факультета Информационных технологий <span class="i"><a href="https://www.belstu.by/">Белорусского Государственного Технологического Университета</a></span>.
         </p>
 
         <p>Наш проект - Научный калькулятор, выполняющий множество разнообразных функций, о которых подробнее рассказано ниже. Назначение проета - создание программы, которая поможет студентам в тяжёлом мире математики: поможет разобраться с матрицами, переводом в различные системы счисления, найти площади, объёмы и многое другое! </p>
 
         <h2>Цели</h2>
-        <ul id="project-aims">
+        <ul>
             <li>изучение жизненного цикла разработки ПО</li>
             <li>изучение методологии проектирования ПО</li>
             <li>выполнение проектирования и разработки проекта в целом и его отдельных модулей</li>
@@ -48,71 +44,73 @@
             <li>получение опыта работы в команде</li>
         </ul>
 
-        <p id="start-data">Дата начала работы над проектом: 14 декабря 2021 г.</p>
+        <p>Дата начала работы над проектом: 14 декабря 2021 г.</p>
         <p>Дата завершения работы над проектом: 28 декабря 2021 г. </p>
         <p>Программа написана на языке C++, средой разработки данной программы является VS 2019.</p>
       </article>
       <h2 id="team">Команда</h2>
 
       <figure class="lt">
-        <a href="https://github.com/ax2067"><img src="img/team/3.png" alt="" class="teamleader"></a>
+        <a href="https://github.com/ax2067" title="Жук Анна"><img src="img/team/3.png" alt="" class="teamleader"></a>
         <figcaption>Team leader</figcaption>
       </figure>
-  <div class="flex">
-      <figure class="rab">
-        <a href="https://github.com/Chamsterr"><img src="img/team/1.png" alt="" class="rab"></a>
-        <figcaption>Разработчик</figcaption>
-      </figure>
 
-      <figure class="rab">
-        <a href="https://github.com/Xsen0N"><img src="img/team/2.png" alt="" class="rab"></a>
-        <figcaption>Разработчик</figcaption>
-      </figure>
+      <div class="flex">
+        <figure class="rab">
+          <a href="https://github.com/Chamsterr" title="Ковкель Никита"><img src="img/team/1.png" alt="" class="rab"></a>
+          <figcaption>Разработчик</figcaption>
+        </figure>
 
-      <figure class="rab">
-        <a href="https://github.com/DemonLeviathan"><img src="img/team/4.png" alt="" class="rab"></a>
-        <figcaption>Разработчик</figcaption>
-      </figure>
+        <figure class="rab">
+          <a href="https://github.com/Xsen0N" title="Жук Ксения"><img src="img/team/2.png" alt="" class="rab"></a>
+          <figcaption>Разработчик</figcaption>
+        </figure>
 
-      <figure class="rab">
-        <a href="https://github.com/4ellovekkk"><img src="img/team/5.png" alt="" class="rab"></a>
-        <figcaption>Разработчик</figcaption>
-      </figure>
+        <figure class="rab">
+          <a href="https://github.com/DemonLeviathan" title="Викторович Ирина"><img src="img/team/4.png" alt="" class="rab"></a>
+          <figcaption>Разработчик</figcaption>
+        </figure>
 
-      <figure class="rab">
-        <a href="https://github.com/SANO12321"><img src="img/team/6.png" alt="" class="rab"></a>
-        <figcaption>Разработчик</figcaption>
-      </figure>
-    </div>
+        <figure class="rab">
+          <a href="https://github.com/4ellovekkk" title="Макаров Алексей"><img src="img/team/5.png" alt="" class="rab"></a>
+          <figcaption>Разработчик</figcaption>
+        </figure>
+
+        <figure class="rab">
+          <a href="https://github.com/SANO12321" title="Александр Сакович"><img src="img/team/6.png" alt="" class="rab"></a>
+          <figcaption>Разработчик</figcaption>
+        </figure>
+      </div>
+
       <h2 id="moduls">Описание модулей</h2>
       <h3>Модуль1 - Операции над числами</h3>
       <p>
-        <b>Модуль "Operation" ("Операции над числами")</b> представляет из себя два более простых, логически целостных модуля. Первый модуль, разработанный <i><a href="https://github.com/Xsen0N">Жук Ксенией</a></i>, позволяет совершать арифметическими вычисления: сложение, вычитание, умножение, деление, возведение в степень (что будет улучшено и дополнено во втором модуле) операции со скобками. Второй модуль, который был разработан непосредственно <i><a href="https://github.com/Chamsterr">Ковкелем Никитой</a></i>, - работа с тригонометрическими функциями, такими как sin(), cos(), tg(), ctg(); e( возведение экспоненты в степень), вычисление логарифмов. Калькулятор может работать не только с двумя числами, а с целым выражением, определять приоритет операции. При выборе данного модуля, вы можете заметить некоторые примечания, написанные в самом начале, которые помогут вам упростить работу, повысить понимание и избежать некорректного ввода
+        <span class="b">Модуль "Operation" ("Операции над числами")</span> представляет из себя два более простых, логически целостных модуля. Первый модуль, разработанный <span class="i"><a href="https://github.com/Xsen0N">Жук Ксенией</a></span>, позволяет совершать арифметическими вычисления: сложение, вычитание, умножение, деление, возведение в степень (что будет улучшено и дополнено во втором модуле) операции со скобками. Второй модуль, который был разработан непосредственно <span class="i"><a href="https://github.com/Chamsterr">Ковкелем Никитой</a></span>, - работа с тригонометрическими функциями, такими как sin(), cos(), tg(), ctg(); e( возведение экспоненты в степень), вычисление логарифмов. Калькулятор может работать не только с двумя числами, а с целым выражением, определять приоритет операции. При выборе данного модуля, вы можете заметить некоторые примечания, написанные в самом начале, которые помогут вам упростить работу, повысить понимание и избежать некорректного ввода
       </p>
 
       <h3>Модуль2 -  Конвертация в двоичный/шестнадцатиричный/восьмиричный код</h3>
       <p>
-        <b>Модуль "Conversion" ("Конвертация в двоичный/шестнадцатеричный/восьмеричный код")</b>, разработанный <i><a href="https://github.com/DemonLeviathan">Викторович Ириной</a></i>, позволяет совершать различные переводы, причём не только с десятичной системы счисления в другие, но и с любой другой, что является некой многофункциональной изюменкой данного модуля.
+        <span class="b">Модуль "Conversion" ("Конвертация в двоичный/шестнадцатеричный/восьмеричный код")</span>, разработанный <span class="i"><a href="https://github.com/DemonLeviathan">Викторович Ириной</a></span>, позволяет совершать различные переводы, причём не только с десятичной системы счисления в другие, но и с любой другой, что является некой многофункциональной изюменкой данного модуля.
       </p>
 
       <h3>  Модуль3 - Работы с матрицами</h2>
       <p>
-        <b>Модуль "Matrix"("Работа с матрицами")</b>, разработанный <i><a href="https://github.com/ax2067">Жук Анной</a></i>, объединяет в себе работу с матрицами второго, третьего и даже четвёртого порядка! Вам будут доступны следующие функции: нахождение определителя, ранга матриц, нахождение обратной матрицы, сложение и разность двух матриц, а также умножение матриц на число!
+        <span class="b">Модуль "Matrix"("Работа с матрицами")</span>, разработанный <span class="i"><a href="https://github.com/ax2067">Жук Анной</a></span>, объединяет в себе работу с матрицами второго, третьего и даже четвёртого порядка! Вам будут доступны следующие функции: нахождение определителя, ранга матриц, нахождение обратной матрицы, сложение и разность двух матриц, а также умножение матриц на число!
       </p>
 
       <h3>Модуль4 - площади фигур</h2>
       <p>
-        <b>Модуль "Squares" ("Операции с функциями и нахождение площадей различных фигур")</b>, разработанный <i><a href="https://github.com/4ellovekkk">Макаровым Алексеем</a></i>, является невероятным примером конкретности, точности и разнообразия. Модуль позволит вам найти площадь треугольника, прямоугольника, паралеллограмма, ромба, площади полной поверхности различных фигур!
+        <span class="b">Модуль "Squares" ("Операции с функциями и нахождение площадей различных фигур")</span>, разработанный <span class="i"><a href="https://github.com/4ellovekkk">Макаровым Алексеем</a></span>, является невероятным примером конкретности, точности и разнообразия. Модуль позволит вам найти площадь треугольника, прямоугольника, паралеллограмма, ромба, площади полной поверхности различных фигур!
       </p>
 
       <h3>Модуль №5 - Нахождение объёма фигур</h3>
       <p>
-        <b>Модуль "Volume"("Нахождение объёма фигур")</b>, разработанный <i><a href=https://github.com/DemonLeviathan>Викторович Ириной</a></i>, служит лучшим помощником в нахождении объёмов в таком разделе математики, как стериометрия! Если при работе с объёмными фигурами вы немного дизориентированы, ничего страшного, этот модуль решит вашу проблему!
+        <span class="b">Модуль "Volume"("Нахождение объёма фигур")</span>, разработанный <span class="i"><a href=https://github.com/DemonLeviathan>Викторович Ириной</a></span>, служит лучшим помощником в нахождении объёмов в таком разделе математики, как стериометрия! Если при работе с объёмными фигурами вы немного дизориентированы, ничего страшного, этот модуль решит вашу проблему!
       </p>
 
       <h3>Модуль №6 - Дополнительные операции (факториал, НОК и НОД)</h3>
       <p>
-        <b>Модуль "Additionally" ("Дополнительные операции")</b>, разработанн <i><a href="https://github.com/SANO12321">Саковичем Александром</a></i>. Кажется, что НОК и НОД очень простые для запоминаия функции, но уверенно могу сказать, что они и просто забываются! Чтобы не мучать себя безумно долгими воспоминаниями о таких вещах, как НОК и НОД, этот модуль поможет быстро освежить вашу память, быстро и и корректно посчитает.
+        <span class="b">Модуль "Additionally" ("Дополнительные операции")</span>, разработанн <span class="i"><a href="https://github.com/SANO12321">Саковичем Александром</a></span>. Кажется, что НОК и НОД очень простые для запоминаия функции, но уверенно могу сказать, что они и просто забываются! Чтобы не мучать себя безумно долгими воспоминаниями о таких вещах, как НОК и НОД, этот модуль поможет быстро освежить вашу память, быстро и и корректно посчитает.
       </p>
   </div>
 
